--- a/cl2020.html
+++ b/cl2020.html
@@ -1,12 +1,9 @@
 <html>
 <head>
-<title>練習その3</title>
+<title>レポート4</title>
 </head>
 <body>
-<h2>他の文章へのリンクのつけ方</h2>
-たとえば、高知工科大学のホームページにリンクを張るときは、
-<br>
-<a href="http://www.kochi-tech.ac.jp/">高知工科大学</a>
-とします.
+<h2>交通信号機</h2>
+生まれた時から存在していた信号機。
 </body>
 </html>
