--- a/cl2020.html
+++ b/cl2020.html
@@ -4,6 +4,6 @@
 </head>
 <body>
 <h2 align="center">交通信号機</h2>
-  <p align="center"> 生まれた時から存在していた信号機。</p>
+  <p align="center"> 生まれた時から存在していた信号機。交通事故の防止、交通流の円滑化などの役割がある。</p>
 </body>
 </html>
