--- a/cl2020.html
+++ b/cl2020.html
@@ -4,6 +4,9 @@
 </head>
 <body>
 <h2 align="center">交通信号機</h2>
-  <p align="center"> 生まれた時から存在していた信号機。交通事故の防止、交通流の円滑化などの役割がある。</p>
+  <p align="center"> 生まれた時から存在していた信号機。幼い時から信号待ちをしている時には「ある一定の時間で切り替わっているのか」
+    　　　　　　　　「交通量で判断して切り替わっているのか」といった事を疑問に思っていた。しかし、その疑問を解決しないまま今に至った。
+    　　　　　　　　
+  </p>
 </body>
 </html>
