--- a/cl2020.html
+++ b/cl2020.html
@@ -12,15 +12,16 @@
   </p>
 <hr>
   <h3 align="center">信号機の制御とパラメーター</h3>
-  <p align="center">交通信号機を制御するために用いられるパラメータは以下の3種類である。</p>
-<p align="center">・サイクル長:信号表示が一巡する時間<br>
+  <p>交通信号機を制御するために用いられるパラメータは以下の3種類である。</p>
+<p>・サイクル長:信号表示が一巡する時間<br>
 ・青信号スプリット：各現示に割り当てられる時間または割合<br>
 ・オフセット：隣接する交差点どうしで系統制御するために、系統方向の各交差点における青の開始時間の差（秒数またはサイクル長に対する百分率)<br>
   </p>
-  <p align="center">信号の制御方式は、制御対象の信号交差点の関連性から以下の分類に分けられる。</p>
-<p align="center">・点制御（地点制御） : 信号交差点を単独で制御する。<br>
+  <p>信号の制御方式は、制御対象の信号交差点の関連性から以下の分類に分けられる。</p>
+<p>・点制御（地点制御） : 信号交差点を単独で制御する。<br>
 ・線制御（路線制御） : 一連の隣接する交差点を相互に連動させて制御する。<br>
 ・面制御 : 面的に堀がる道路網に設置された複数の信号機を一括して制御する。<br>
   </p>
+  
 </body>
 </html>
