--- a/cl2020.html
+++ b/cl2020.html
@@ -5,9 +5,10 @@
 <body>
 <h2 align="center">交通信号機</h2>
   <p> 車社会が発展し生まれた信号機。幼い時から信号待ちをしている時には「ある一定の時間で切り替わっているのか」
-    「交通量で判断して切り替わっているのか」<br>といった事を疑問に思っていた。しかし、その疑問を解決しないまま今
-     に至った。また、身近にあるものであり日頃から誰もが利用し人々の安全を守ってくれるものだが、無知である。
-    そこで、今回のレポートを通じて幼いころから思っていた疑問を解消し、信号機についての知識を身に付けたいと考えたから。
+    「交通量で判断して切り替わっているのか」<br>
+    といった事を疑問に思っていた。しかし、その疑問を解決しないまま今に至った。また、身近にあるものであり日頃から
+    誰もが利用し人々の安全を守ってくれる<br>
+    ものだが、無知である。そこで、今回のレポートを通じて幼いころから思っていた疑問を解消し、信号機についての知識を身に付けたいと考えたから。
   </p>
 <hr>
   <h3 align="center">信号機の制御とパラメーター</h3>
