--- a/cl2020.html
+++ b/cl2020.html
@@ -11,7 +11,8 @@
     ものだが、無知である。そこで、今回のレポートを通じて幼いころから思っていた疑問を解消し、信号機についての知識を身に付けたいと考えたから。
   </p>
 <hr>
-  <h3 align="center">信号機の制御とパラメーター</h3>
+  <h3 align="center">信号機の制御について</h3>
+  まず、信号機が
   <p>"交通信号機を制御するために用いられるパラメータは以下の3種類である。</p>
 <p>・サイクル長:信号表示が一巡する時間<br>
 ・青信号スプリット：各現示に割り当てられる時間または割合<br>
@@ -24,5 +25,7 @@
   </p>
   あと幾つかあるため知りたい方は<a href="https://ja.wikipedia.org/wiki/%E6%97%A5%E6%9C%AC%E3%81%AE%E4%BA%A4%E9%80%9A%E4%BF%A1%E5%8F%B7%E6%A9%9F#%E4%BF%A1%E5%8F%B7%E6%A9%9F%E3%81%AE%E9%85%8D%E5%88%97%E3%83%BB%E6%84%8F%E5%91%B3%E3%83%BB%E7%82%B9%E7%81%AF%E3%83%91%E3%82%BF%E3%83%BC%E3%83%B3">
   日本の交通信号機</a>を参照にして欲しい。
+  <hr>
+  
 </body>
 </html>
