--- a/cl2020.html
+++ b/cl2020.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>レポート4</title>
+<title></title>
 </head>
 <body>
 <h2 align="center">交通信号機</h2>
@@ -26,6 +26,6 @@
   あと幾つかあるため知りたい方は<a href="https://ja.wikipedia.org/wiki/%E6%97%A5%E6%9C%AC%E3%81%AE%E4%BA%A4%E9%80%9A%E4%BF%A1%E5%8F%B7%E6%A9%9F#%E4%BF%A1%E5%8F%B7%E6%A9%9F%E3%81%AE%E9%85%8D%E5%88%97%E3%83%BB%E6%84%8F%E5%91%B3%E3%83%BB%E7%82%B9%E7%81%AF%E3%83%91%E3%82%BF%E3%83%BC%E3%83%B3">
   日本の交通信号機</a>を参照にして欲しい。
   <hr>
-  
+  <h3 align="center"></h3>
 </body>
 </html>
