--- a/cl2020.html
+++ b/cl2020.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-<title></title>
 </head>
 <body>
 <h2 align="center">交通信号機</h2>
@@ -21,10 +20,18 @@
   <p>信号の制御方式は、制御対象の信号交差点の関連性から以下の分類に分けられる。</p>
 <p>・点制御（地点制御） : 信号交差点を単独で制御する。<br>
 ・線制御（路線制御） : 一連の隣接する交差点を相互に連動させて制御する。<br>
-・面制御 : 面的に堀がる道路網に設置された複数の信号機を一括して制御する。"【1】<br>
+・面制御 : 面的に堀がる道路網に設置された複数の信号機を一括して制御する。<br>
   </p>
-  あと幾つかあるため知りたい方は<a href="https://ja.wikipedia.org/wiki/%E6%97%A5%E6%9C%AC%E3%81%AE%E4%BA%A4%E9%80%9A%E4%BF%A1%E5%8F%B7%E6%A9%9F#%E4%BF%A1%E5%8F%B7%E6%A9%9F%E3%81%AE%E9%85%8D%E5%88%97%E3%83%BB%E6%84%8F%E5%91%B3%E3%83%BB%E7%82%B9%E7%81%AF%E3%83%91%E3%82%BF%E3%83%BC%E3%83%B3">
-  日本の交通信号機</a>を参照にして欲しい。
+  <ul><li>・定周期制御：時間帯に応じてあらかじめ信号制御のパラメータが設定されているもの。
+    <ul><li>・一段周期制御：常時まったく同じ制御パラメータを用いて制御</li>
+<li>・多段周期制御：時間帯や曜日ごとにあらかじめ信号制御パラメータを設定して制御</li></ul></li>
+<li>・交通感応制御
+<ul><li>・端末感応制御：車両感知器などの感知器を用いて制御するもの。
+  <ul><li>・全感応制御：全部の現示を感応式によって調整する制御</li>
+<li>・半感応制御：一部の現示を感応式によって調整する制御であり、感知があった時のみその方向に通行権を与えるものを「リコール式半感応制御」という</li></ul></li>
+<li>・中央感応制御（交通応答制御）：線制御・面制御される複数の交差点に対して、制御パラメータを変化させて制御させるもの。
+  <ul><li>・プログラム選択制御：あらかじめ定められた有限個の制御パラメータを組み合わせプログラムから、車両感知器が得た情報に基づきそのときの交通状態に適するプログラムを選択する制御</li>
+<li>・プログラム形成制御：車両感知器が得た情報に基づきオンラインでパラメータや信号の切り替えを行うタイミングを決定する制御"【1】</li></ul></li></ul></li></ul>
   <hr>
   <h3 align="center"></h3>
 </body>
