--- a/cl2020.html
+++ b/cl2020.html
@@ -3,8 +3,8 @@
 </head>
 <body>
 <h2 align="center">交通信号機</h2>
-  <p{width:50%;}> 車社会が発展し生まれた信号機。幼い時から信号待ちをしている時には「ある一定の時間で切り替わっているのか」「交通量で判断して切り替わっているのか」
-    といった事を疑問に思っていた。しかし、その疑問を解決しないまま今に至った。また、身近にあるものであり日頃から 誰もが利用し人々の安全を守ってくれる
+  <p> 車社会が発展し生まれた信号機。幼い時から信号待ちをしている時には「ある一定の時間で切り替わっているのか」「交通量で判断して切り替わっているのか」<br class="hidden-mobile">
+    といった事を疑問に思っていた。しかし、その疑問を解決しないまま今に至った。また、身近にあるものであり日頃から 誰もが利用し人々の安全を守ってくれる<br class="hidden-mobile">
     ものだが、無知である。そこで、今回のレポートを通じて幼いころから思っていた疑問を解消し、信号機についての知識を身に付けたいと考えたから。
   </p>
 <hr>
