--- a/cl2020.html
+++ b/cl2020.html
@@ -3,8 +3,8 @@
 </head>
 <body>
 <h2 align="center">交通信号機</h2>
-  <p> 車社会が発展し生まれた信号機。幼い時から信号待ちをしている時には「ある一定の時間で切り替わっているのか」「交通量で判断して切り替わっているのか」<br class="hidden-mobile">
-    といった事を疑問に思っていた。しかし、その疑問を解決しないまま今に至った。また、身近にあるものであり日頃から 誰もが利用し人々の安全を守ってくれる<br class="hidden-mobile">
+  <p> 車社会が発展し生まれた信号機。幼い時から信号待ちをしている時には「ある一定の時間で切り替わっているのか」「交通量で判断して切り替わっているのか」<br>
+    といった事を疑問に思っていた。しかし、その疑問を解決しないまま今に至った。また、身近にあるものであり日頃から 誰もが利用し人々の安全を守ってくれる<br>
     ものだが、無知である。そこで、今回のレポートを通じて幼いころから思っていた疑問を解消し、信号機についての知識を身に付けたいと考えたから。
   </p>
 <hr>
@@ -30,6 +30,14 @@
   <ul><li>プログラム選択制御：あらかじめ定められた有限個の制御パラメータを組み合わせプログラムから、車両感知器が得た情報に基づきそのときの交通状態に適するプログラムを選択する制御</li>
 <li>プログラム形成制御：車両感知器が得た情報に基づきオンラインでパラメータや信号の切り替えを行うタイミングを決定する制御"【1】</li></ul></li></ul></li></ul>
   <hr>
-  <h3 align="center"></h3>
+  <h3 align="center">LED信号機</h3>
+  LED式信号機はLED素子を光源とする「プロジェクタ型」と、LED素子を全面に直接配置した「全面素子型」の2種類がある。「プロジェクタ型」は、LED式が開発された際、「全面素子型」よりも安価だったため、
+  初期の頃に一部の都道府県で採用された。しかし、「全面素子型」の方が視認性に優れているため、現在採用されている。全面素子型の歩行者信号機の場合、LED素子が赤色人形には約128個、青色人形には約120個用いられている。こうしたLED素子は基盤の上にセットされ、灯器に入れられる。
+電球によって日中に確実に信号を伝えることは限界に達しつつあり、光源の変更が検討されてきた。後の1993年に青色LEDが発明され、そこから発展して屋外での使用にも耐えうる青色LEDが開発され、信号機にもLEDの使用が開始された。
+この信号機のLED化によって、消費電力がこれまでの60 Wの白熱電球のものと比べて3分の1から10分の1程度にまで抑制できるようになった。またLEDは電球と比べ長寿命であり、電球と比べると頻繁にメンテナンスをする必要がなく、
+  そのためメンテナンス費用の削減にも繋がった。矢印灯器は矢印の部分のみにLEDが配置されているため、 従来の電球式の矢印灯器と比べ大幅に省電力となっている。それに加えて、電球はフィラメントが1個しかなく、このフィラメントが切れると完全に点灯しなくなる欠点があったが、
+  LED式は回路を工夫することで1つのLEDが切れても他のLEDが点灯し続けるようになっていて安全性が向上している。LED式は電球式と異なり、表示面から均一に光が放出される。またLEDそのものが色を含めて発光するので表示面の着色レンズや内部の反射鏡が不要となり、
+  そのため本来点灯していない色が点灯しているように見える疑似点灯現象が生じないようになったので、信号機そのものの視認性が改善された。
+  <hr>
 </body>
 </html>
