--- a/cl2020.html
+++ b/cl2020.html
@@ -31,13 +31,16 @@
 <li>プログラム形成制御：車両感知器が得た情報に基づきオンラインでパラメータや信号の切り替えを行うタイミングを決定する制御"【1】</li></ul></li></ul></li></ul>
   <hr>
   <h3 align="center">LED信号機</h3>
-  LED式信号機はLED素子を光源とする「プロジェクタ型」と、LED素子を全面に直接配置した「全面素子型」の2種類がある。「プロジェクタ型」は、LED式が開発された際、「全面素子型」よりも安価だったため、
-  初期の頃に一部の都道府県で採用された。しかし、「全面素子型」の方が視認性に優れているため、現在採用されている。全面素子型の歩行者信号機の場合、LED素子が赤色人形には約128個、青色人形には約120個用いられている。こうしたLED素子は基盤の上にセットされ、灯器に入れられる。
-電球によって日中に確実に信号を伝えることは限界に達しつつあり、光源の変更が検討されてきた。後の1993年に青色LEDが発明され、そこから発展して屋外での使用にも耐えうる青色LEDが開発され、信号機にもLEDの使用が開始された。
-この信号機のLED化によって、消費電力がこれまでの60 Wの白熱電球のものと比べて3分の1から10分の1程度にまで抑制できるようになった。またLEDは電球と比べ長寿命であり、電球と比べると頻繁にメンテナンスをする必要がなく、
-  そのためメンテナンス費用の削減にも繋がった。矢印灯器は矢印の部分のみにLEDが配置されているため、 従来の電球式の矢印灯器と比べ大幅に省電力となっている。それに加えて、電球はフィラメントが1個しかなく、このフィラメントが切れると完全に点灯しなくなる欠点があったが、
-  LED式は回路を工夫することで1つのLEDが切れても他のLEDが点灯し続けるようになっていて安全性が向上している。LED式は電球式と異なり、表示面から均一に光が放出される。またLEDそのものが色を含めて発光するので表示面の着色レンズや内部の反射鏡が不要となり、
-  そのため本来点灯していない色が点灯しているように見える疑似点灯現象が生じないようになったので、信号機そのものの視認性が改善された。
+  "LED式信号機はLED素子を光源とする「プロジェクタ型」と、LED素子を全面に直接配置した「全面素子型」の2種類がある。「プロジェクタ型」は、LED式が開発された際、<br>
+  「全面素子型」よりも安価だったため、初期の頃に一部の都道府県で採用された。しかし、「全面素子型」の方が視認性に優れているため、現在採用されている。全面素子<br>
+  型の歩行者信号機の場合、LED素子が赤色人形には約128個、青色人形には約120個用いられている。こうしたLED素子は基盤の上にセットされ、灯器に入れられる。電球によ<br>
+  って日中に確実に信号を伝えることは限界に達しつつあり、光源の変更が検討されてきた。後の1993年に青色LEDが発明され、そこから発展して屋外での使用にも耐えうる<br>
+  青色LEDが開発され、信号機にもLEDの使用が開始された。この信号機のLED化によって、消費電力がこれまでの60 Wの白熱電球のものと比べて3分の1から10分の1程度にまで<br>
+  抑制できるようになった。またLEDは電球と比べ長寿命であり、電球と比べると頻繁にメンテナンスをする必要がなく、そのためメンテナンス費用の削減にも繋がった。矢印<br>
+  灯器は矢印の部分のみにLEDが配置されているため、 従来の電球式の矢印灯器と比べ大幅に省電力となっている。それに加えて、電球はフィラメントが1個しかなく、このフィ<br>
+  ラメントが切れると完全に点灯しなくなる欠点があったが、LED式は回路を工夫することで1つのLEDが切れても他のLEDが点灯し続けるようになっていて安全性が向上している。<br>
+  LED式は電球式と異なり、表示面から均一に光が放出される。またLEDそのものが色を含めて発光するので表示面の着色レンズや内部の反射鏡が不要となり、そのため本来点灯<br>
+  していない色が点灯しているように見える疑似点灯現象が生じないようになったので、信号機そのものの視認性が改善された。"【1】
   <hr>
 </body>
 </html>
