--- a/cl2020.html
+++ b/cl2020.html
@@ -42,5 +42,7 @@
   LED式は電球式と異なり、表示面から均一に光が放出される。またLEDそのものが色を含めて発光するので表示面の着色レンズや内部の反射鏡が不要となり、そのため本来点灯
     していない色が点灯しているように見える疑似点灯現象が生じないようになったので、信号機そのものの視認性が改善された。"【1】</p>
   <hr>
+  <h3 align="center">まとめ</h3>
+  
 </body>
 </html>
