--- a/cl2020.html
+++ b/cl2020.html
@@ -42,6 +42,7 @@
     していない色が点灯しているように見える疑似点灯現象が生じないようになったので、信号機そのものの視認性が改善された。"【1】</p>
   <hr>
   <h3 align="center">まとめ</h3>
+  信号機の制御法は数多くあり、交通量の違いによって制御法が違うことが分かる。また、地元の信号機は交通量が少ないためサイクル長であると考えられる。
   
 </body>
 </html>
