--- a/cl2020.html
+++ b/cl2020.html
@@ -43,6 +43,11 @@
   <hr>
   <h3 align="center">まとめ</h3>
   信号機の制御法は数多くあり、交通量の違いによって制御法が違うことが分かる。また、地元の信号機は交通量が少ないためサイクル長であると考えられる。
-  
-</body>
+  電球からLEDに変わったことで頻繁にメンテナンスする必要がなく費用の削減につながっているなどのメリットが増えたことがうかがえる。今回のレポートで
+  今までの疑問が解消することができた。今後は実際に信号機を見比べて、信号機によって制御の違いを目視したい。
+  <hr>
+  <h3 align="center">参考文献</h3>
+  <A href="https://ja.wikipedia.org/wiki/%E6%97%A5%E6%9C%AC%E3%81%AE%E4%BA%A4%E9%80%9A%E4%BF%A1%E5%8F%B7%E6%A9%9F#%E4%BF%A1%E5%8F%B7%E6%A9%9F%E3%81%AE%E9%85%8D%E5%88%97%E3%83%BB%E6%84%8F%E5%91%B3%E3%83%BB%E7%82%B9%E7%81%AF%E3%83%91%E3%82%BF%E3%83%BC%E3%83%B3">
+    [text]日本の交通信号機</A>
+  </body>
 </html>
