--- a/cl2020.html
+++ b/cl2020.html
@@ -49,6 +49,6 @@
   <h3 align="center">参考文献</h3>
   【1】
   <A href="https://ja.wikipedia.org/wiki/%E6%97%A5%E6%9C%AC%E3%81%AE%E4%BA%A4%E9%80%9A%E4%BF%A1%E5%8F%B7%E6%A9%9F#%E4%BF%A1%E5%8F%B7%E6%A9%9F%E3%81%AE%E9%85%8D%E5%88%97%E3%83%BB%E6%84%8F%E5%91%B3%E3%83%BB%E7%82%B9%E7%81%AF%E3%83%91%E3%82%BF%E3%83%BC%E3%83%B3">
-    [text]日本の交通信号機</A>
+    日本の交通信号機</A>
   </body>
 </html>
