--- a/cl2020.html
+++ b/cl2020.html
@@ -41,6 +41,9 @@
   LED式は電球式と異なり、表示面から均一に光が放出される。またLEDそのものが色を含めて発光するので表示面の着色レンズや内部の反射鏡が不要となり、そのため本来点灯
     していない色が点灯しているように見える疑似点灯現象が生じないようになったので、信号機そのものの視認性が改善された。"【1】</p>
   <hr>
+  <h3 align="center">豆知識</h3>
+  交通信号機の豆知識として<A href="https://www.pref.fukui.lg.jp/kenkei/kotubu/kkisei/singoumame/mametop.htm">こちら</A>を参照に
+  <hr>
   <h3 align="center">まとめ</h3>
   信号機の制御法は数多くあり、交通量の違いによって制御法が違うことが分かる。また、地元の信号機は交通量が少ないためサイクル長であると考えられる。
   電球からLEDに変わったことで頻繁にメンテナンスする必要がなく費用の削減につながっているなどのメリットが増えたことがうかがえる。今回のレポートで
